--- a/src/features/Home/www/index.html
+++ b/src/features/Home/www/index.html
@@ -10,6 +10,8 @@
      integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
      crossorigin=""></script>
      <link rel="stylesheet" href="index.css">
+         <meta charset="utf-8" />
+    <script src="https://unpkg.com/lodash@4.17.20"></script>
 </head>
 <body>
 
@@ -20,6 +22,10 @@
   <script src="index.ts">
 document.getElementById("map").innerHTML = "Hello leaflet JavaScript!";
 </script>
+  <script src="ui.tsx">
+document.getElementById("map").innerHTML = "Hello react-leaflet JavaScript!";
+</script>
+<script src="./src/indexWebpack.ts"></script>
  </div>
 
 </body>
